ci: remove dockerfile, update README and fix workflow.